provisioning/stream/kubernetes/templates/http-source/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: stream-http-source
  namespace: $NAMESPACE
  labels:
    app: stream-http-source
    releaseId: $RELEASE_ID
spec:
  replicas: $STREAM_HTTP_SOURCE_REPLICAS
  selector:
    matchLabels:
      app: stream-http-source
  template:
    metadata:
      labels:
        app: stream-http-source
        releaseId: $RELEASE_ID
        stream-etcd-client: "true"
        tags.datadoghq.com/env: "$KEBOOLA_STACK"
        tags.datadoghq.com/service: "stream"
        tags.datadoghq.com/version: "$RELEASE_ID"
      annotations:
        log: "true"
        ad.datadoghq.com/tags: '{"git.commit.sha": "$COMMIT_HASH", "git.repository_url": "github.com/keboola/keboola-as-code"}'
        ad.datadoghq.com/stream-http-source.checks: |
          {
            "openmetrics": {
              "instances": [
                {
                  "openmetrics_endpoint": "http://%%host%%:9000/metrics",
                  "metrics": [".*"],
                  "collect_histogram_buckets": true,
                  "histogram_buckets_as_distributions": true,
                  "tag_by_endpoint": false
                }
              ]
            }
          }
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: stream-http-source
          image: $STREAM_IMAGE_REPOSITORY:$STREAM_IMAGE_TAG
          command: [ "/app/service" ]
          args: [ "--config-file", "/stream/config/config.yaml", "http-source" ] # run HTTP source component
          resources:
            requests:
              cpu: "200m"
              memory: "$STREAM_HTTP_SOURCE_MEMORY_SOFT_LIMIT" # also GOMEMLIMIT soft limit
            limits:
              memory: "$STREAM_HTTP_SOURCE_MEMORY_HARD_LIMIT"
          ports:
            - containerPort: 7000 # HTTP source
            - containerPort: 9000 # metrics
          volumeMounts:
            - name: config
              mountPath: /stream/config
              readOnly: true
          startupProbe:
            httpGet:
              path: /health-check
              port: 7000
              httpHeaders:
                - name: Host
                  value: KubernetesStartupProbe
            initialDelaySeconds: 10
            periodSeconds: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health-check
              port: 7000
              httpHeaders:
                - name: Host
                  value: KubernetesReadinessProbe
            periodSeconds: 10
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /health-check
              port: 7000
              httpHeaders:
                - name: Host
                  value: KubernetesLivenessProbe
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: config
          configMap:
            name: stream-config
            items:
              - key: config.yaml
                path: config.yaml
      nodeSelector:
        nodepool: main
